--- a/ThreeBar/ThreeBar/Info.plist
+++ b/ThreeBar/ThreeBar/Info.plist
@@ -35,6 +35,8 @@
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
+		<string>accelerometer</string>
+		<string>gyroscope</string>
 		<string>armv7</string>
 		<string>gamekit</string>
 	</array>
