--- a/ThreeBar/ThreeBar/Magic.plist
+++ b/ThreeBar/ThreeBar/Magic.plist
@@ -44,6 +44,8 @@
 	<string>mob</string>
 	<key>mobSize</key>
 	<integer>125</integer>
+	<key>mobMinDistance</key>
+	<integer>250</integer>
 	<key>controlCenter</key>
 	<integer>130</integer>
 	<key>controlImage</key>
