--- a/ThreeBar/ThreeBar/Magic.plist
+++ b/ThreeBar/ThreeBar/Magic.plist
@@ -14,6 +14,12 @@
 	<integer>30</integer>
 	<key>heroMoveSpeed</key>
 	<real>0.05</real>
+	<key>projectileSprite</key>
+	<string>projectile</string>
+	<key>projectileSize</key>
+	<integer>20</integer>
+	<key>projectileSpeed</key>
+	<integer>1</integer>
 	<key>flashDuration</key>
 	<real>0.03</real>
 	<key>scoreFont</key>
