--- a/ThreeBar/ThreeBar/Magic.plist
+++ b/ThreeBar/ThreeBar/Magic.plist
@@ -21,9 +21,11 @@
 	<key>projectileDistance</key>
 	<integer>3000</integer>
 	<key>projectileSpeed</key>
-	<integer>3</integer>
+	<integer>8</integer>
 	<key>laserSprite</key>
 	<string>laser</string>
+	<key>laserBackSprite</key>
+	<string>laser-back</string>
 	<key>laserSize</key>
 	<integer>100</integer>
 	<key>flashDuration</key>
