explosion refactoring; hero can't shoot if dead

--- a/ThreeBar/ThreeBar/Magic.plist
+++ b/ThreeBar/ThreeBar/Magic.plist
@@ -20,6 +20,10 @@
 	<integer>30</integer>
 	<key>heroMoveSpeed</key>
 	<real>0.1</real>
+	<key>explosionDuration</key>
+	<real>0.3</real>
+	<key>explosionSize</key>
+	<real>0.7</real>
 	<key>projectileSprite</key>
 	<string>projectile</string>
 	<key>projectileSize</key>
