--- a/ThreeBar/ThreeBar/Info.plist
+++ b/ThreeBar/ThreeBar/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>4BAR</string>
+	<string>fre.ac</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
