--- a/ThreeBar/ThreeBar/Magic.plist
+++ b/ThreeBar/ThreeBar/Magic.plist
@@ -55,9 +55,17 @@
 	<key>titleFont</key>
 	<string>Red Fish</string>
 	<key>titleSize</key>
-	<integer>200</integer>
+	<integer>130</integer>
 	<key>titleText</key>
 	<string>fre.ac</string>
+	<key>titleBgColor</key>
+	<string>f66d6d</string>
+	<key>titleBgWidth</key>
+	<integer>700</integer>
+	<key>titleBgHeight</key>
+	<integer>180</integer>
+	<key>titleRotation</key>
+	<integer>3</integer>
 	<key>startButtonFont</key>
 	<string>CharcoalScript</string>
 	<key>startButtonSize</key>
